# rust-todo-server-workshop

./: .gitignore  Cargo.toml  Intro.md  README.md  WORKSHOP.md  index.html  todo_api.http
src/: lib.rs  main.rs  todo.rs  todo_api.http
src/solutions/: create_todo_table.sql  db.rs
tests/: todos.rs
