[package]
name = "todo-server-workshop"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
rusqlite = "0.30.0"
tokio = { version = "1.35.1", features = ["rt-multi-thread"] }

[dev-dependencies]
tower = "0.4.13"
