[package]
name = "todo-server-workshop"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
rusqlite = "0.30.0"
serde = { version = "1.0.195", features = ["derive"] }
tokio = { version = "1.35.1", features = ["rt-multi-thread"] }

[dev-dependencies]
http-body-util = "0.1.0"
tower = "0.4.13"
