[package]
name = "todo-server-workshop"
version = "0.1.0"
edition = "2021"
rust-version = "1.78.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.8.1"
axum-macros = "0.5.0"
serde = { version = "1.0.195", features = ["derive"] }
tokio = { version = "1.35.1", features = ["rt-multi-thread"] }
tokio-rusqlite = "0.6.0"

[dev-dependencies]
http-body-util = "0.1.0"
serde_json = "1.0.111"
tower = "0.5.2"
uuid = { version = "1.7.0", features = ["v4", "fast-rng"] }
